# timesetter

./: .gitignore  CMakeLists.txt  README.md  checklist.txt  pyproject.toml  requirements.txt  setup.cfg
module/setsystemtime/: __init__.py  on_windows.cpp
module/timesetter/: __init__.py  __init__.pyi
