[project]
name = "timesetter"
version = "1.8.0"
description = "A Python package to set system time regardless of operating system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
extend-select = ["N", "I", "T20", "SLF", "INP"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
