[metadata]
name = setsystemtime
version = 0.1
author = cunarist
author_email = cunarist@example.com
description = A Python package to set system time regardless of operating system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cunarist/set-system-time
project_urls =
    Bug Tracker = https://github.com/cunarist/set-system-time/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL
    Operating System :: OS Independent

[options]
package_dir =
    = module
packages = find:
python_requires = >=3.6

[options.packages.find]
where = module

[options.package_data]
* = *.dll, *.so